@@ -1,3 +1,8 @@
+2006-12-29  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (JAVA4_FEATURES, NO_JAVA4_FEATURES): Set/clear
+	use:java.nio flag.
+
 2006-12-20  Per Bothner  <per@bothner.com>
 
 	* configure.in (--with-gcj): New option.
